# ldoomc

./: .cproject  .gitignore  .gitmodules  .project  .ycm_extra_conf.py  CMakeLists.txt  LUAAPI.md  README.md
cmake_modules/: FindLuaJIT.cmake  Findglfw3.cmake
glfw/: CMakeLists.txt
osx/: Info.plist  buildapp.sh  icon.icns
resources/: basic.glsl  consolefont.txt  diffuseshader.glsl  fancy.txt  font.fnt  fontdraw.glsl  hud.txt  preethamsky.glsl  reflectshader.glsl  sky.glsl  test.blend
resources/scripts/: bootstrap.lua
src/: amalg.c  arenastate.c  arenastate.h  audio.c  audio.h  blockfactory.c  blockfactory.h  brush.c  camera.c  camera.h  config.h  console.c  console.h  defines.h  drenderer.c  drenderer.h  fntdraw.c  fntdraw.h  gamestate.c  gamestate.h  gen.c  gen.h  geom.c  geom.h  glad.c  glfw.h  grid3d.c  grid3d.h  hash.c  hash.h  ldmath.c  ldmath.h  ldoom.h  log.c  log.h  lua_audio.c  lua_camera.c  lua_console.c  lua_fntdraw.c  lua_interop.c  (+48 more)
src/GL/include/glad/: glad.h
src/GL/src/: glad.c
src/ds/: grid3d.c  grid3d.h  hash.h  opool.h  vector.h
src/glad/: glad.h
src/math/: geom.c  geom.h
src/render/: camera.c  camera.h  mesh.c  mesh.h  shader.c  shader.h  texture.c  texture.h
